[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://UI/Sprites/Cat Portrait.png" type="Texture" id=2]
[ext_resource path="res://UI/Sprites/Multiplier.png" type="Texture" id=3]
[ext_resource path="res://UI/Sprites/Score.png" type="Texture" id=4]
[ext_resource path="res://UI/multi_sprites.tres" type="SpriteFrames" id=5]
[ext_resource path="res://UI/Sprites/Single_Paw.png" type="Texture" id=6]
[ext_resource path="res://UI/Sprites/Distance and Distance Meter_Fill.png" type="Texture" id=7]
[ext_resource path="res://UI/Sprites/Distance and Distance Meter.png" type="Texture" id=8]

[node name="UI" type="CanvasLayer" groups=["UI"]]
script = ExtResource( 1 )

[node name="Character" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.180392 )
position = Vector2( 10, 10 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="ScoreDisplay" type="Node" parent="."]

[node name="ScoreLabel" type="Sprite" parent="ScoreDisplay"]
position = Vector2( 10, 944 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( 0, -35 )
__meta__ = {
"_edit_lock_": true
}

[node name="Score" type="RichTextLabel" parent="ScoreDisplay"]
margin_left = 10.0
margin_top = 954.0
margin_right = 415.0
margin_bottom = 1014.0
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="MultiplierDisplay" type="Node" parent="."]

[node name="MultiplierLabel" type="Sprite" parent="MultiplierDisplay"]
position = Vector2( 566, 944 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -103, -23 )
__meta__ = {
"_edit_lock_": true
}

[node name="Multiplier" type="AnimatedSprite" parent="MultiplierDisplay"]
position = Vector2( 566, 1014 )
frames = ExtResource( 5 )
animation = "x2"
centered = false
offset = Vector2( -130, -70 )
__meta__ = {
"_edit_lock_": true
}

[node name="Lives" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.75 )
position = Vector2( 10, 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="live1" type="Sprite" parent="Lives"]
texture = ExtResource( 6 )
centered = false

[node name="live2" type="Sprite" parent="Lives"]
position = Vector2( 60, 30 )
texture = ExtResource( 6 )
centered = false

[node name="live3" type="Sprite" parent="Lives"]
position = Vector2( 0, 60 )
texture = ExtResource( 6 )
centered = false

[node name="live4" type="Sprite" parent="Lives"]
position = Vector2( 60, 90 )
texture = ExtResource( 6 )
centered = false

[node name="live5" type="Sprite" parent="Lives"]
position = Vector2( 0, 120 )
texture = ExtResource( 6 )
centered = false

[node name="live6" type="Sprite" parent="Lives"]
position = Vector2( 60, 150 )
texture = ExtResource( 6 )
centered = false

[node name="live7" type="Sprite" parent="Lives"]
position = Vector2( 0, 180 )
texture = ExtResource( 6 )
centered = false

[node name="live8" type="Sprite" parent="Lives"]
position = Vector2( 60, 210 )
texture = ExtResource( 6 )
centered = false

[node name="live9" type="Sprite" parent="Lives"]
position = Vector2( 0, 240 )
texture = ExtResource( 6 )
centered = false

[node name="Distance" type="Node" parent="."]

[node name="Progress" type="TextureProgress" parent="Distance"]
margin_left = 184.0
margin_top = 10.0
margin_right = 566.0
margin_bottom = 67.0
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 7 )
texture_progress_offset = Vector2( 7, 7 )
__meta__ = {
"_edit_lock_": true
}
